--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -8,5 +8,7 @@
  * ------------------------------------------------------------
  */
 {
-  "current": {}
+  "current": {
+    "color_scheme": "mocha"
+  }
 }
